# diffroom

./: .gitattributes  .gitignore  LICENSE  README.md  justfile
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/diffroom/: cli.py  models.py  openapi.py  server.py  store.py
backend/src/diffroom/git/: __init__.py  commands.py  diff_parser.py
backend/tests/: test_cli.py  test_diff_parser.py  test_git_commands.py  test_models.py  test_server.py  test_store.py
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/diff/: DiffFile.test.tsx  DiffFile.tsx  DiffRow.test.tsx  DiffRow.tsx  DiffView.test.tsx  DiffView.tsx  ThreadComposer.test.tsx  ThreadComposer.tsx  ThreadItem.tsx  anchor.test.ts  anchor.ts  useDiff.test.tsx  useDiff.ts  useThreads.test.tsx  useThreads.ts
frontend/src/lib/: api-types.ts  api.test.ts  api.ts  token.test.ts  token.ts
