[project]
name = "diffroom"
dynamic = ["version"]
description = "Local-first review workspace for Git diffs and coding agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "pydantic>=2",
]

[project.scripts]
diffroom = "diffroom.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/diffroom/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/diffroom"]

[tool.hatch.build]
# Force-include the frontend build output, which is gitignored.
artifacts = ["src/diffroom/static/**"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
python_version = "3.10"
strict = true
